[tool.poetry]
name = "backend"
version = "0.1.0"
description = "SurveyKong Backend"
authors = ["Matt Mahowald <mahowaldmatt@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "models" },
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.77.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.0"
supabase = "^2.10.0"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
